# Telegram-bot

./: .gitignore  main.py  pyproject.toml
src/bot/: bot.py
src/bot/FSM/: fsm.py
src/bot/keyboards/: keyboard.py
src/client/: __init__.py  client.py
src/client/models/: __init__.py  moderate.py  places.py  reviews.py
src/client/routes/: BaseRouter.py  __init__.py  moderate.py  places.py  reviews.py  user.py
src/config/: __init__.py  config.py
