[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot for handle complaints"
authors = ["Evgeniy Smirnov <59017716+mrlimax1@users.noreply.github.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.4.1"
pydantic = "^2.6.4"
aiohttp = "^3.9.3"

[tool.poetry.scripts]
start = "src.client.client:run"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
